# selective-graph-colouring

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
base-sgcp/: example-params.json
base-sgcp/source-code/: graph.hpp  main.cpp  solver_stats.cpp  stable_set.cpp
cmake/: FindCplex.cmake  FindExactcolors.cmake
instances/big-random/: generator.py  graph_1000_0.1_1.txt  graph_1000_0.1_10.txt  graph_1000_0.1_2.txt  graph_1000_0.1_5.txt  graph_1000_0.1_6.txt  graph_1000_0.2_1.txt  graph_1000_0.2_10.txt  graph_1000_0.2_4.txt  graph_1000_0.2_5.txt  graph_1000_0.2_6.txt  graph_1000_0.2_8.txt  graph_1000_0.2_9.txt  graph_1000_0.3_10.txt  graph_1000_0.3_3.txt  graph_1000_0.3_4.txt  graph_1000_0.3_6.txt  graph_1000_0.3_9.txt  graph_1000_0.4_1.txt  graph_1000_0.4_10.txt  graph_1000_0.4_3.txt  graph_1000_0.4_4.txt  graph_1000_0.4_6.txt  graph_1000_0.4_9.txt  graph_1000_0.5_5.txt  graph_1000_0.5_6.txt  graph_1000_0.5_7.txt  graph_1000_0.5_8.txt  graph_1000_0.5_9.txt  graph_1000_0.6_2.txt  graph_1000_0.6_5.txt  graph_1000_0.6_6.txt  graph_1000_0.6_9.txt  graph_1000_0.7_1.txt  graph_1000_0.7_10.txt  graph_1000_0.7_2.txt  graph_1000_0.7_3.txt  graph_1000_0.7_4.txt  graph_1000_0.7_5.txt  graph_1000_0.7_6.txt  (+7 more)
instances/nsfnet/: nsf_p0.1_s5.txt  nsf_p0.2_s2.txt  nsf_p0.2_s3.txt  nsf_p0.3_s2.txt  nsf_p0.3_s5.txt  nsf_p0.4_s2.txt  nsf_p0.4_s4.txt  nsf_p0.4_s5.txt  nsf_p0.5_s4.txt  nsf_p0.5_s5.txt  nsf_p0.7_s2.txt  nsf_p0.7_s4.txt  nsf_p0.8_s1.txt  nsf_p0.8_s4.txt  nsf_p0.8_s5.txt  nsf_p0.9_s1.txt  nsf_p0.9_s2.txt  nsf_p0.9_s4.txt  nsf_p1.0_s2.txt  nsf_p1.0_s3.txt
instances/random/: n100p5t2s1.txt  n100p5t2s3.txt  n100p5t2s4.txt  n100p5t2s5.txt  n120p5t2s1.txt  n120p5t2s2.txt  n120p5t2s4.txt  n20p5t2s2.txt  n20p5t2s3.txt  n20p5t2s5.txt  n40p5t2s1.txt  n40p5t2s2.txt  n40p5t2s3.txt  n60p5t2s2.txt  n60p5t2s3.txt  n60p5t2s4.txt  n70p5t2s1.txt  n70p5t2s4.txt  n80p5t2s4.txt  n90p1t2s4.txt  n90p1t2s5.txt  n90p2t2s5.txt  n90p3t2s1.txt  n90p3t2s2.txt  n90p4t2s1.txt  n90p5t2s3.txt  n90p5t2s4.txt  n90p6t2s4.txt  n90p6t2s5.txt  n90p7t2s3.txt  n90p8t2s1.txt  n90p8t2s4.txt  n90p8t2s5.txt  n90p9t2s2.txt  n90p9t2s3.txt  n90p9t2s4.txt  n90p9t2s5.txt
instances/ring/: ring_n10p0.1s4.txt  ring_n10p0.1s5.txt  ring_n10p0.2s1.txt  ring_n10p0.2s2.txt  ring_n10p0.3s1.txt  ring_n10p0.3s4.txt  ring_n10p0.3s5.txt  ring_n10p0.4s2.txt  ring_n10p0.4s3.txt  ring_n10p0.4s4.txt  ring_n10p0.4s5.txt  ring_n10p0.5s2.txt  ring_n10p0.5s3.txt  ring_n10p0.5s5.txt  ring_n10p0.7s5.txt  ring_n10p0.8s1.txt  ring_n10p0.8s5.txt  ring_n10p0.9s2.txt  ring_n10p0.9s3.txt  ring_n10p1.0s4.txt  ring_n15p0.2s1.txt  ring_n15p0.2s2.txt  ring_n15p0.2s3.txt  ring_n15p0.3s1.txt  ring_n15p0.3s2.txt  ring_n15p0.3s4.txt  ring_n15p0.3s5.txt  ring_n15p0.4s2.txt  ring_n15p0.4s4.txt  ring_n15p0.5s2.txt  ring_n15p0.6s2.txt  ring_n15p0.6s3.txt  (+41 more)
source-code/: graph.cpp  main.cpp  params.cpp  params.hpp  solver_stats.hpp  stable_set.cpp  stable_set.hpp
(+1009 files in other folders)
